UI - Widget title overflow fixed

--- a/listing/static/listing/css/sb-admin.css
+++ b/listing/static/listing/css/sb-admin.css
@@ -426,7 +426,7 @@ span.nav-item
 .wid-details h2
 {
   float: left;
-  width: 100%;
+  width: 75%;
   line-height: 18px;
   font-size: 18px;
   text-transform: uppercase;
